EKS/service-flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: carlos-load-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  spec:
    type: NodePorte
    selector:
      app: carlos-load
    ports:
      - port: 5000
        targetPort: 5000
        nodePort: 30301
    type: LoadBalancer
